--- a/package.json
+++ b/package.json
@@ -34,5 +34,14 @@
 		"jsonwebtoken": "^9.0.2",
 		"prettier": "^3.4.2",
 		"vitest": "^2.1.8"
+	},
+	"peerDependencies": {
+		"@aws-sdk/client-dynamodb": "^3.x",
+		"@aws-sdk/client-kms": "^3.x",
+		"@aws-sdk/client-s3": "^3.x",
+		"@aws-sdk/client-sns": "^3.x",
+		"@aws-sdk/client-sqs": "^3.x",
+		"@aws-sdk/lib-dynamodb": "^3.x",
+		"@smithy/types": "^3.x"
 	}
 }
