--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 		"@aws-sdk/client-sns": "^3.712.0",
 		"@aws-sdk/client-sqs": "^3.712.0",
 		"@aws-sdk/lib-dynamodb": "^3.712.0",
+		"@aws-sdk/util-dynamodb": "^3.712.0",
 		"@smithy/types": "^3.7.2",
+		"@types/aws-lambda": "^8.10.145",
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/node": "^22.10.2",
 		"@vitest/coverage-v8": "2.1.8",
@@ -42,6 +44,7 @@
 		"@aws-sdk/client-sns": "^3.x",
 		"@aws-sdk/client-sqs": "^3.x",
 		"@aws-sdk/lib-dynamodb": "^3.x",
+		"@aws-sdk/util-dynamodb": "^3.x",
 		"@smithy/types": "^3.x"
 	}
 }
