--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"base64url": "^3.0.1",
 		"jsonwebtoken": "^9.0.2",
 		"prettier": "^3.4.2",
+		"vite": "^6.0.6",
 		"vitest": "^2.1.8"
 	},
 	"peerDependencies": {
